--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="app">
+        <h1 id="headline.toUpperCase()">{{headline}}</h1>
+        <img v-bind="imgAttrs" />
+
 
 
 
